2009-12-30  Araki Ken  <arakiken@users.sf.net>

	* CP1250,CP1252,CP1253,CP1254,CP1256,CP1257,CP1259 related codes are
	  added to mkf. (Binary compatibility is broken.)

	* 'daemon_mode = genuine' is rejected (only 'blend' is accepted) in win32.

	* mkf_utf16_{parser|conv}.c: Processing surrogate pair is fixed.

	* x_draw_str.c: convert_ucs4_to_utf16 which is used to convert
	  ucs4 code to XChar2b(Xlib) or WCHAR(win32) is added.

	* ucs property table(mkf): Updated and data structure is changed.
	  mkf/libtbl/mkf_ucs_property.c,table/mkf_ucs_*_property.table
	  (which becomes libmkf_ucsprop.la) are removed and
	  mkf/lib/table/mkf_ucs_property.table(statically linked to libmkf.la)
	  is added.

	* mkf/libtbl/table/mkf_*.table: Shrunk.

	* mkf/table: Scripts which generates mkf tables are added.

2009-12-11  Araki Kena  <arakiken@users.sf.net>

	* mkf_tblfunc_loader.h: 'kik_dl_open( "" , libname)' is added to
	  mkf_map_func2 and mkf_prop_func.

	* mkf/mkf_utf16_conv.c: use_bom member is added to mkf_utf16_conv_t
	  and use_bom is false by default.

	* x_window_win32.c: text_out function which outputs text
	  by TextOutW or TextOutA appropriately is added. UCS2 text encoded
	  by UTF8 is supported.
	  
	* ml_term_manager.c: ml_destroy_term() which is used when
	  ml_term_open_pty() fails is added.

	* ml_pty_pipewin32.c: Error handling codes are added in pty_open().

	* /dev/windows is used for waiting for windows messages in msys and
	  cygwin(win32 native GUI). Fixed the problem that mlterm sometimes
	  hung up in GetMessage() when child process exited.

	* mlterm server and mlclient seems to work in msys and cygwin(win32 native GUI).

	* Dialog box to input server, protocol, user name and password
	  is introduced to mlterm built in MinGW.
	  o 'default_server'(--serv) and 'server_list'(--servlist) options
	    which are shown by default in dialog box are introduced.
	  o x_connect_dialog.[ch],winrs.rs: added.
