@@ -455,6 +455,9 @@ static u_int32_t  ucs4_to_cp1251_end = 0x2122 ;
 static ucs4_to_cp1251_table_t ucs4_to_cp1251_tables[] =
 {
 	{ ucs4_to_cp1251_table_0 , &ucs4_to_cp1251_range_0 } ,
+	{ NULL , NULL , } ,
+	{ NULL , NULL , } ,
+	{ NULL , NULL , } ,
 	{ ucs4_to_cp1251_table_4 , &ucs4_to_cp1251_range_4 } ,
 	{ NULL , NULL , } ,
 	{ NULL , NULL , } ,
@@ -487,7 +490,7 @@ static ucs4_to_cp1251_table_t ucs4_to_cp1251_tables[] =
 	{ ucs4_to_cp1251_table_21 , &ucs4_to_cp1251_range_21 } ,
 } ;
 
-/* Assume 'i' is UCS4(32bit) */
+/* 'i' is UCS4(32bit) */
 #define  HI(i)  ( ((i)>>8) & 0xffffff )
 #define  LO(i)  ( (i) & 0xff )
 
