@@ -599,7 +599,7 @@ static ucs4_to_iso8859_14_r_table_t ucs4_to_iso8859_14_r_tables[] =
 	{ ucs4_to_iso8859_14_r_table_1e , &ucs4_to_iso8859_14_r_range_1e } ,
 } ;
 
-/* Assume 'i' is UCS4(32bit) */
+/* 'i' is UCS4(32bit) */
 #define  HI(i)  ( ((i)>>8) & 0xffffff )
 #define  LO(i)  ( (i) & 0xff )
 
