@@ -338,7 +338,7 @@ static ucs4_to_iso8859_4_r_table_t ucs4_to_iso8859_4_r_tables[] =
 	{ ucs4_to_iso8859_4_r_table_2 , &ucs4_to_iso8859_4_r_range_2 } ,
 } ;
 
-/* Assume 'i' is UCS4(32bit) */
+/* 'i' is UCS4(32bit) */
 #define  HI(i)  ( ((i)>>8) & 0xffffff )
 #define  LO(i)  ( (i) & 0xff )
 
