@@ -24880,6 +24880,8 @@ static u_int32_t  ucs4_to_jisx0208_1983_end = 0xffe5 ;
 static ucs4_to_jisx0208_1983_table_t ucs4_to_jisx0208_1983_tables[] =
 {
 	{ ucs4_to_jisx0208_1983_table_0 , &ucs4_to_jisx0208_1983_range_0 } ,
+	{ NULL , NULL , } ,
+	{ NULL , NULL , } ,
 	{ ucs4_to_jisx0208_1983_table_3 , &ucs4_to_jisx0208_1983_range_3 } ,
 	{ ucs4_to_jisx0208_1983_table_4 , &ucs4_to_jisx0208_1983_range_4 } ,
 	{ NULL , NULL , } ,
